--- a/UniClub/Info.plist
+++ b/UniClub/Info.plist
@@ -8,5 +8,10 @@
 		<string>KronaOne-Regular.ttf</string>
 		<string>NotoSansKR-Bold.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
